2007-07-06  Bernhard Rosenkraenzer  <bero@arklinux.org>

Reviewed by Sam.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=13985
        Bug 13985: WebCore/rendering/RenderTable.cpp fails to compile with gcc 4.2.x

        * rendering/RenderTable.cpp:
        (WebKit::RenderTable::calcBorderLeft)
        (WebKit::RenderTable::calcBorderRight)


Canonical link: https://commits.webkit.org/18796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24058 268f45cc-cd09-0410-ab3c-d52691b4dbfc